k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-auth-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-auth
  template:
    metadata:
      labels:
        app: flask-auth
    spec:
      containers:
      - name: flask-auth
        image: localhost:5000/flask-auth-app:latest
        ports:
        - containerPort: 5000
