k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-auth-service
spec:
  selector:
    app: flask-auth
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
